FInal changes for the project

--- a/test_fe/src/app/main/main.component.html
+++ b/test_fe/src/app/main/main.component.html
@@ -14,6 +14,9 @@
                             Get ID
                         </button>
                     </div>
+                    <div *ngIf="user_id!=0" class="row" style="margin-top: 50px;color: antiquewhite;text-align: center;">
+                        <p>Your Id is {{ user_id }}</p>
+                    </div>
                 </div>
             </div>
         </div>
